--- a/public/global.css
+++ b/public/global.css
@@ -33,6 +33,7 @@ h1 {
     font-style: normal;
     font-weight: 700;
     padding: 0.5vh;
+    margin: 16px;
 }
 
 h2 {
@@ -72,14 +73,7 @@ label {
 }
 
 input, button, select, textarea {
-    font-family: inherit;
-    font-size: inherit;
-    -webkit-padding: 0.4em 0;
-    padding: 0.4em;
-    margin: 0 0 0.5em 0;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 2px;
+    border: 0;
 }
 
 input:disabled {
@@ -95,6 +89,7 @@ input:disabled {
     padding: 11px 30px;
     text-transform: uppercase;
     border-radius: 8px;
+    font-weight: 500;
 }
 
 .btn:hover {
@@ -103,4 +98,143 @@ input:disabled {
 
 .btn:active {
     background-color: rgba(0, 0, 0, 0.7);
+}
+
+.btn:disabled {
+    background-color: #DDDDDD;
+    color: rgba(0, 0, 0, 0.40)
+}
+
+.btn:disabled:hover {
+    cursor: default;
+}
+
+.onboarding-h1 {
+    font-size: 40px;
+    line-height: 40px;
+    text-align: left;
+    font-weight: 500;
+    letter-spacing: -2px;
+}
+
+.question {
+    width: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: left;
+}
+
+.content-box {
+    flex: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    margin-bottom: 55px;
+}
+
+.center-text {
+    text-align: center;
+}
+
+.option-container {
+    margin-top: 15px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 6px;
+    display: inline-flex;
+}
+
+.question-container{
+    margin-top: 15px;
+}
+
+
+.option-box {
+    margin-top: 5px;
+    align-self: stretch;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 6px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.option {
+    padding: 12px 16px;
+    background: white;
+    border-radius: 8px;
+    border: 1px #DDDDDD solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.option.selected {
+    background: #D9D2FF;
+    border: 1px #A693F3 solid;
+}
+
+.option-text {
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.option-text:hover {
+    cursor: pointer;
+}
+
+.next-button {
+    width:100%;
+    max-width: 335px;
+    position: fixed;
+    bottom: 15px
+}
+
+
+.input-container {
+    margin-top: 15px;
+    width: 100%;
+    height: 86px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    display: inline-flex;
+}
+
+.input-box {
+    margin-top: 5px;
+    align-self: stretch;
+    padding: 15px 16px;
+    background: white;
+    border-radius: 12px;
+    border: 1px #DDDDDD solid;
+    display: inline-flex;
+}
+
+.input {
+    flex: 1;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    background: transparent;
+}
+
+.input-icon {
+    padding-right: 8px;
+    align-items: center;
+    display: flex;
 }
