--- a/public/global.css
+++ b/public/global.css
@@ -21,7 +21,6 @@ body {
     background: #F5F5F5;
     font-size: 1rem;
     display: flex;
-    width: 100vw;
     justify-content: center;
 }
 
@@ -31,7 +30,7 @@ h1 {
     font-size: 4.5rem;
     line-height: 4.5rem;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     padding: 0.5vh;
     margin: 16px;
 }
@@ -198,6 +197,7 @@ input:disabled {
 }
 
 .next-button {
+    padding: 16px 30px;
     width:100%;
     max-width: 335px;
     position: fixed;
@@ -236,5 +236,13 @@ input:disabled {
 .input-icon {
     padding-right: 8px;
     align-items: center;
+    display: flex;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+form {
     display: flex;
 }
